--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <script src="p5.min.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="matter.js"></script>
-    <script src="BaseClass.js"></script>
-    <script src="Ground.js"></script>
-    <script src="Box.js"></script>
-    <script src="Viking.js"></script>
-    <script src="Log.js"></script>
-    <script src="Rock.js"></script>
-    <script src="Slingshot.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Clash With Vikings</title>
+    <script src="./lib/p5.min.js"></script>
+    <script src="./lib/p5.dom.min.js"></script>
+    <script src="./lib/p5.sound.min.js"></script>
+    <script src="./lib/matter.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+
+    <script src="./js/BaseClass.js"></script>
+    <script src="./js/Ground.js"></script>
+    <script src="./js/Box.js"></script>
+    <script src="./js/Log.js"></script>
+    <script src="./js/Rock.js"></script>
+    <script src="./js/Viking.js"></script>
+    <script src="./js/Slingshot.js"></script>
+
     <style>
       .button {
         background-color: #e2727b;
@@ -28,11 +31,12 @@
         margin: 5px 5px;
         cursor: pointer;
       }
-      </style>
-    <meta charset="utf-8">
-</head>
-<body>
-  <script src="sketch.js"></script>
-  <button class="button" onClick="window.location.reload()">Reload Game Level</button>
- </body>
+    </style>
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+    <button class="button" onClick="window.location.reload()">
+      Reload Game Level
+    </button>
+  </body>
 </html>
